--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,35 @@
-<h1>Lasagna</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Lasagna</h1>
+    <img src="/images/lasagna.jpg">
+    <h2>World's best homemade Lasagna</h2>
+    <p>This is the recipe for the absolutely best lasagna anyone will ever make.</p>
+    <p>This recipe has won countless awards for its deliciouness and has been fetured in man New York Times Best Seller cook books.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>Meat</li>
+        <li>Onion</li>
+        <li>Garlic</li>
+        <li>Tomato Sauce</li>
+        <li>Sugar</li>
+        <li>Spices and Seasoning</li>
+        <li>Lasagna Noodles</li>
+        <li>Cheese</li>
+        <li>Egg</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Make the meat sauce.</li>
+        <li>Cook the noodles.</li>
+        <li>Make the ricotta mixture.</li>
+        <li>Layer the lasagna according to the recipe instructions.</li>
+        <li>Cover with foil and bake.</li>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
+</body>
+</html>
