2 more recipes added, updated index with links
Created a page for a pancake recipe and a sloppy joe recipe.
Added images for both recipes.
Updated index file with links to newly added recipes.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <h1>Odin Recipes</h1>
 
         <a href="recipes/lasagna.html">Lasagna Recipe</a>
+        <a href="recipes/pancakes.html">Pancake Recipe</a>
+        <a href="recipes/sloppyjoe.html">Sloppy Joe Recipe</a>
     </body>
 </html>
