images on recipe pages now load properly
Had to fix the code that referenced images for each recipe page.

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Pancakes</h1>
-    <img src="/images/pancakes.jpg">
+    <img src="../images/pancakes.jpg">
     <h2>World's best homemade pancakes</h2>
     <p>These buttermilk pancakes are passed down from my grandmother, who was fully Scandinavian. They are light and fluffy, and great with berry syrups. I have made these for years as a special treat, and I hope you enjoy them as much as my family has.</p>
     <h3>Ingredients</h3>
