--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="/images/lasagna.jpg">
+    <img src="../images/lasagna.jpg">
     <h2>World's best homemade Lasagna</h2>
     <p>This is the recipe for the absolutely best lasagna anyone will ever make.</p>
     <p>This recipe has won countless awards for its deliciouness and has been fetured in man New York Times Best Seller cook books.</p>
