--- a/recipes/sloppyjoe.html
+++ b/recipes/sloppyjoe.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Sloppy Joe</h1>
-    <img src="/images/sloppyjoe.jpg">
+    <img src="../images/sloppyjoe.jpg">
     <h2>Worlds best homemade Sloppy Joe</h2>
     <p>Homemade Sloppy Joes don't have to be difficult to eat. Despite the name of this iconic retro dish, the secret to a great Sloppy Joe is a thick, rich, almost dry consistency, which allows the sandwich to be eaten with your hands. Serve on hamburger buns.</p>
     <h3>Ingredients</h3>
