Edited stles for index page
Index page style updated
recipes pages updated

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
 
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-
-        <a href="recipes/lasagna.html">Lasagna Recipe</a>
-        <a href="recipes/pancakes.html">Pancake Recipe</a>
-        <a href="recipes/sloppyjoe.html">Sloppy Joe Recipe</a>
+        <h1 class="title">Odin Recipes</h1>
+    <div class="links">
+        <a class="link" href="recipes/lasagna.html">Lasagna Recipe</a>
+        <a class="link" href="recipes/pancakes.html">Pancake Recipe</a>
+        <a class="link" href="recipes/sloppyjoe.html">Sloppy Joe Recipe</a>
+    </div>
     </body>
 </html>
