--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna Recipe</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Lasagna</h1>
