--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Pancake Recipe</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Pancakes</h1>
